--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: A.P
-baseurl: "/ap"
-url: "https://SunilJeong95.github.io"
+baseurl: ""
+url: "https://SunilJeong95.github.io/index.html"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
