--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: A.P
+title: SunilJeong
 baseurl: ""
 url: "https://SunilJeong95.github.io/index.html"
 google_analytics: # Tracking ID, e.g. "UA-000000-01"
 
 # Author
 author:
-  name: KyeongSeob Sim
-  desc: Hello nice to meet you
-  email: ksub0912@gmail.com
-  selfie: assets/img/profile.jpg
+  name: Sunil Jeong
+  desc: I will come forth as gold
+  email: wjdtjsdlf210@gmail.com
+  selfie: assets/img/profile.png
 
 # social
 social:
@@ -23,7 +23,7 @@ social:
   google_plus:
   instagram:
   keybase:
-  linkedin: https://www.linkedin.com/in/kssim/ 
+  linkedin: 
   pinterest:
   reddit:
   soundcloud:
@@ -31,7 +31,7 @@ social:
   steam:
   tumblr:
   gitlab:
-  twitter: Test
+  twitter:
   vimeo:
   wordpress:
   youtube:
