--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ social:
   behance:
   bitbucket:
   dribbble:
-  facebook: Test
+  facebook: 
   flickr:
-  github: kssim
+  github: SunilJeong95
   google_plus:
   instagram:
   keybase:
